# novus

./: .gitignore  .gitmodules  CREDITS.md  Cargo.toml  LICENSE  README.md  powershell_install.ps1
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: info.rs  install.rs  list.rs  mod.rs  quit.rs  search.rs  startup.rs  uninstall.rs  update.rs
commands/: install.rs  uninstall.rs  update.rs
models/: package.rs
novus/: Cargo.toml
novus/src/: main.rs
novus/src/commands/: alias.rs  clean.rs  config.rs  install.rs  install_portable.rs  list.rs  mod.rs  quit.rs  search.rs  startup.rs  status.rs  uninstall.rs
src/: main.rs
src/classes/: installed_packages.rs  local_package_info.rs  mod.rs  package.rs  package_info.rs
src/commands/: clean.rs  info.rs  install.rs  list.rs  mod.rs  quit.rs  search.rs  uninstall.rs  update.rs
src/constants/: commands.rs  help_menu.rs  mod.rs  version.rs
src/utils/: autoelevate.rs  autoupdate.rs  cache.rs  checksum.rs  display_help.rs  get_package.rs  handle_args.rs  handle_error.rs  mod.rs  registry.rs
utils/: Cargo.toml  cache.rs  display_help.rs  get_package.rs  handle_args.rs
utils/src/: autoelevate.rs  cache.rs  check_version.rs  checksum.rs  display_help.rs  get_package.rs  handle_args.rs  handle_error.rs  lib.rs  registry.rs
utils/src/classes/: aliases.rs  config.rs  installed_packages.rs  local_package_info.rs  mod.rs  package.rs  package_info.rs
utils/src/constants/: commands.rs  config_menu.rs  help_menu.rs  mod.rs  version.rs
utils/src/scripts/: auto_elevate_scripts.rs  mod.rs
